# pelotero-engine

./: .envrc  .gitignore  README.md  flake.nix  hix.cabal  pelotero-Derivation.nix  pelotero-engine.cabal  pelotero-engine.nix  scraper.cabal  scraperProto.cabal  tui
.github/workflows/: haskell.yml
appData/: activePlayers.json
contract/src/: Main.hs
contract/src/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: Generators.md  Validators.md
nix/: hix.nix  serve-docs.nix
notes/: BS_League_Scraper.py  Drafting.txt  boxScore_inputShape.json  mlb.txt  mutationGoal.txt  mutationIdeal.txt  mutationReality.txt
notes/old notes/: Baseball.md  BaseballEvents.md  Current Concerns.md  HeadToHead.md  MLB Box Score Access II.md  MLB Box Score Access.md  MLB api calls.md  MLB api calls_01.md  MLBAPI positionCodes.txt  PlayEvent.md  bash_commands_game.txt  flattenedGameExample.json  gameID.json  haskell2graphiviz.txt  prompt_flatten.txt  variables.md
notes/old notes/Canvases/: Baseball_V5.md  Crowd-Oracles Project Map.canvas  DependencyGraph.canvas  Fantasy Baseball V2.canvas  Fantasy Baseball.canvas  HeadToHead_V5.md  PlayEvent Detailed.canvas  PlayEvent _V5.md
notes/old notes/dayStats/: BattingStats  GameStats  PitchingStats  PlayerStats  Stats  currentDataType.hs  sourceDataType.hs
scraper/src/: scraper.cabal
src/: ADT.hs  ADT_Config.hs  ADT_DayStats.hs  ADT_Input.hs  ADT_Input_trace.hs  ADT_Lg.hs  ADT_Middle.hs  ADT_Roster.hs  ADT_Test.hs  AutoDraft.hs  AutoDraftM.hs  AutoDraftNEW.hs  BoxScoreScraper.hs  BoxscoreSchema  BoxscoreSchema.hs  BruteForce.hs  BxScoreTester.hs  ConfigADT.hs  DK_Test.hs  FetchActiveRoster.hs  FetchStats.hs  Head2Head.hs  Hybrid.hs  InputADT.hs  InputADT_trace.hs  InputSchemas.hs  Input_trace.hs  League.hs  LeagueTEST.hs  Main.hs  MiddleADT.hs  MonadTest.hs  Mutate.hs  OfficialTest.hs  OutputADT.hs  OutputSchemas.hs  Playground.hs  PullDown.hs  ScrapeTools.hs  Scraper.hs  (+5 more)
src/ADT/: Config.hs  DayStats.hs  Input.hs  Input_trace.hs  Leaderboard.hs  Middle.hs  OfficialRoster.hs  PlayerRanking.hs  Points.hs  Ranking.hs  Roster.hs  Stats.hs
src/League/: Conversion.hs  Draft.hs  DraftM.hs  DraftMonad.hs  Generators.hs  PointCalc.hs  Scraper.hs  Utility.hs  Validators.hs
testFiles/: 716896_boxscore.json  configurationGraph.dot  ideal_Boxscore.json  shortened copy.json  shortened.json  testfile.json  testfile2.json  testfile3.json
testFiles/api/: schedule_2023-08-22.json
testFiles/appData/config/: config.json
testFiles/appData/draftResults/: 087cc1f8c262_draft_results_new.json  11817bfe52d3_draft_results_new.json  2f70cf31d261_draft_results.json  3da9fd7edb1b_draft_results.json  474414c7ab56_draft_results_new.json  4aeebfdcc387_draft_results.json  4aeebfdcc387_draft_results_new.json  4d0f22bec934_draft_results.json  4d0f22bec934_draft_results_new.json  8902a8299c1c_draft_results_new.json  team1Roster.json  team2Roster.json
testFiles/appData/rankings/: 0500326e6e_randomRankings.json  2f24118416_randomRankings.json  3198858d6e_randomRankings.json  3cd998461c_randomRankings.json  4d9c90973d_randomRankings.json  521d6c369c_randomRankings.json  56bbfce3a3_randomRankings.json  7e135a0af6_randomRankings.json  96c65b0bc7_randomRankings.json  9cf4a87736_randomRankings.json  _087cc1f8c262_.json  _11817bfe52d3_.json  _2f70cf31d261_.json  _3da9fd7edb1b_.json  _474414c7ab56_.json  _4aeebfdcc387_.json  _4d0f22bec934_.json  _575019d3b22d_.json  _76dcf99f8c63_.json  _780138b906c7_.json  _7f508b2ff355_.json  _8902a8299c1c_.json  _ba30de7ef801_.json  _d0ec788eb8a0_.json  _e6df2a7ce508_.json  cdfadadd43_randomRankings.json  randomRankings.json  team001_rankings.json  team002_rankings.json
testFiles/appData/rosters/: activePlayers.json  activePlayers_old.json  team_001.json  team_002.json  team_003.json  team_004.json
testFiles/appData/stats/: 2023_08_22.json  2023_08_23.json  2023_08_24.json
testFiles/mlb/: activePlayers_2023.json  livefeed_716896 .json
testFiles/prototype_config/: config.json  explanation.txt  invalid_lineup.json  invalid_roster.json  valid_roster.json
