cabal-version: 3.6
-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: pelotero-engine
version: 0.0.5.1

executable playground
  hs-source-dirs: src, src/ADT, src/League
  main-is: Playground.hs
  ghc-options: -O2
  other-modules:  Config, Points, Input, Leaderboard, Middle, OfficialRoster, Roster, Scraper, Ranking, Validators, PointCalc, Utility
  build-depends:  base >=4.11 && <4.18
                , random
                , filepath
                , memory  
                , http-conduit 
                , time
                , bytestring
                , http-client-tls
                , http-client
                , zlib
                , process
                , aeson
                , aeson-schemas
                , lens
                , vector
                , unordered-containers
                , text
                , debug-trace-var
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory
                , async

executable head2head
  hs-source-dirs: src, src/ADT, src/League
  main-is: Head2Head.hs
  ghc-options: -O2
  other-modules:  Scraper, Input, Middle, Roster, Config, Points, OfficialRoster, Validators, Ranking, PointCalc, Stats, Utility
  build-depends:  base >=4.11 && <4.18
                , random 
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , http-client-tls
                , http-client
                , zlib
                , process
                , aeson
                , aeson-schemas
                , lens
                , vector
                , unordered-containers
                , text
                , debug-trace-var
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory
                , async

executable fetchStats
  hs-source-dirs: src, src/ADT, src/League
  main-is: FetchStats.hs
  ghc-options: -O2
  other-modules:  Input, Middle, Scraper, Points, Config, Roster, OfficialRoster, Validators, Ranking, PointCalc, Utility
  build-depends:  base >=4.11 && <4.18
                , random
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , http-client-tls
                , http-client
                , zlib
                , process
                , aeson
                , aeson-schemas
                , lens
                , vector
                , unordered-containers
                , text
                , debug-trace-var
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory
                , async
                
executable roster
  hs-source-dirs: src, src/ADT, src/League
  main-is: FetchActiveRoster.hs
  ghc-options: -O2
  other-modules:  Input, Middle, Scraper, Points, Roster, Config, Leaderboard, OfficialRoster, Ranking, Validators, PointCalc, Conversion, Utility
  build-depends:  base >=4.11 && <4.18
                , random 
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , http-client-tls
                , http-client
                , zlib
                , process
                , aeson
                , aeson-schemas
                , lens
                , vector
                , unordered-containers
                , text
                , debug-trace-var
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory
                , async
                , cassava

executable league
  hs-source-dirs: src, src/ADT, src/League
  main-is: LeagueTEST.hs
  ghc-options: -O2
  other-modules:  Validators, Config, Points, Input, Middle, OfficialRoster, Roster, Ranking, PointCalc, Utility
  build-depends:  base >=4.11 && <4.18
                , random 
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , http-client-tls
                , http-client
                , zlib
                , process
                , aeson
                , aeson-schemas
                , lens
                , vector
                , unordered-containers
                , text
                , debug-trace-var
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory
                , async

executable test_adt
  hs-source-dirs: src, src/ADT, src/League
  main-is: Test.hs
  ghc-options: -O2
  other-modules:  Input_trace
  build-depends:  base >=4.11 && <4.18
                , random  
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , http-client-tls
                , http-client
                , zlib
                , process
                , aeson
                , aeson-schemas
                , lens
                , vector
                , unordered-containers
                , text
                , debug-trace-var
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory
                , async

executable official
  hs-source-dirs: src, src/ADT, src/League
  main-is: OfficialTest.hs
  ghc-options: -O2
  other-modules:  Roster, Config, Input, OfficialRoster, Points, Middle, PointCalc, Ranking, Validators, Utility
  build-depends:  base >=4.11 && <4.18
                , random  
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , http-client-tls
                , http-client
                , zlib
                , process
                , aeson
                , aeson-schemas
                , lens
                , vector
                , unordered-containers
                , text
                , debug-trace-var
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory
                , async

executable autodraft
  hs-source-dirs: src, src/ADT, src/League
  main-is: AutoDraft.hs
  ghc-options: -O2
  other-modules:  Config, OfficialRoster, Roster, Ranking, Input, Middle, Points, Validators, Utility
  build-depends:  base >=4.11 && <4.18
                , random
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , http-client-tls
                , http-client
                , zlib
                , process
                , aeson
                , aeson-schemas
                , lens
                , vector
                , unordered-containers
                , text
                , debug-trace-var
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory
                , async          

executable generators
  hs-source-dirs: src, src/ADT, src/League
  main-is: Generators.hs
  ghc-options: -O2
  other-modules:  Config, OfficialRoster, Roster, Ranking, Input, Middle, Points, Validators, Utility
  build-depends:  base >=4.11 && <4.18
                , random
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , http-client-tls
                , http-client
                , zlib
                , process
                , aeson
                , aeson-schemas
                , lens
                , vector
                , unordered-containers
                , text
                , debug-trace-var
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory
                , async                                