cabal-version: 3.6

name: pelotero-engine
version: 0.0.7.1

executable playground
  hs-source-dirs: src, src/ADT, src/League
  main-is: Playground.hs
  ghc-options: -O2
  other-modules:  Config, Points, Input, Leaderboard, Middle, OfficialRoster, Roster, Scraper, Ranking, Validators, PointCalc, Utility
  build-depends:  base >=4.11 && <4.18
                , random
                , filepath
                , memory  
                , http-conduit 
                , time
                , bytestring
                , aeson
                , vector
                , unordered-containers
                , text
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory
                , async

executable head2head
  hs-source-dirs: src, src/ADT, src/League
  main-is: Head2Head.hs
  ghc-options: -O2
  other-modules:  Scraper, Input, Middle, Roster, Config, Points, OfficialRoster, Validators, Ranking, PointCalc, Stats, Utility
  build-depends:  base >=4.11 && <4.18
                , random 
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , aeson
                , vector
                , unordered-containers
                , text
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory
                , async

executable fetchStats
  hs-source-dirs: src, src/ADT, src/League
  main-is: FetchStats.hs
  ghc-options: -O2
  other-modules:  Input, Middle, Scraper, Points, Config, Roster, OfficialRoster, Validators, Ranking, PointCalc, Utility
  build-depends:  base >=4.11 && <4.18
                , random
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , aeson
                , vector
                , unordered-containers
                , text
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory
                , async
                
executable roster
  hs-source-dirs: src, src/ADT, src/League
  main-is: FetchActiveRoster.hs
  ghc-options: -O2
  other-modules:  Input, Middle, Scraper, Points, Roster, Config, Leaderboard, OfficialRoster, Ranking, Validators, PointCalc, Conversion, Utility
  build-depends:  base >=4.11 && <4.18
                , random 
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , aeson
                , vector
                , unordered-containers
                , text
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory
                , async
                , cassava

executable league
  hs-source-dirs: src, src/ADT, src/League
  main-is: LeagueTEST.hs
  ghc-options: -O2
  other-modules:  Validators, Config, Points, Input, Middle, OfficialRoster, Roster, Ranking, PointCalc, Utility
  build-depends:  base >=4.11 && <4.18
                , random 
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , aeson
                , vector
                , unordered-containers
                , text
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory

executable test_adt
  hs-source-dirs: src, src/ADT, src/League
  main-is: Test.hs
  ghc-options: -O2
  other-modules:  Input_trace
  build-depends:  base >=4.11 && <4.18
                , bytestring
                , aeson
                , text
                , containers

executable official
  hs-source-dirs: src, src/ADT, src/League
  main-is: OfficialTest.hs
  ghc-options: -O2
  other-modules:  Roster, Config, Input, OfficialRoster, Points, Middle, PointCalc, Ranking, Validators, Utility
  build-depends:  base >=4.11 && <4.18
                , random  
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , aeson
                , vector
                , unordered-containers
                , text
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory

executable autodraft
  hs-source-dirs: src, src/ADT, src/League
  main-is: AutoDraft.hs
  ghc-options: -O2
  other-modules:  Config, OfficialRoster, Roster, Ranking, Input, Middle, Points, Validators, Utility
  build-depends:  base >=4.11 && <4.18
                , random
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , aeson
                , vector
                , unordered-containers
                , text
                , debug-trace-var
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory

executable generators
  hs-source-dirs: src, src/ADT, src/League
  main-is: Generators.hs
  ghc-options: -O2
  other-modules:  Config, OfficialRoster, Roster, Ranking, Input, Middle, Points, Validators, Utility
  build-depends:  base >=4.11 && <4.18
                , random
                , memory
                , filepath
                , http-conduit 
                , time
                , bytestring
                , aeson
                , vector
                , unordered-containers
                , text
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory