cabal-version: 3.6

name: pelotero-engine
version: 0.0.8.4

common shared-libs
  build-depends:  base >=4.11 && <4.18
                , random
                , memory
                , filepath
                , http-conduit
                , time
                , bytestring
                , aeson
                , vector
                , unordered-containers
                , text
                , containers
                , cryptohash-sha256
                , crypton
                , scientific
                , directory
  ghc-options: -O2

executable fetchStats
  import: shared-libs
  hs-source-dirs: src, src/ADT, src/League
  main-is: FetchStats.hs
  other-modules:  Input, Middle, Scraper, Points, Config, Roster, OfficialRoster, Validators, PlayerRanking, PointCalc, Utility
  build-depends:  async

executable roster
  import: shared-libs
  hs-source-dirs: src, src/ADT, src/League
  main-is: FetchActiveRoster.hs
  other-modules:  Input, Middle, Scraper, Points, Roster, Config, Leaderboard, OfficialRoster, PlayerRanking, Validators, PointCalc, Conversion, Utility
  build-depends:  cassava
                , async  

executable playground
  import: shared-libs
  hs-source-dirs: src, src/ADT, src/League
  main-is: Playground.hs
  other-modules:  Config, Points, Input, Leaderboard, Middle, OfficialRoster, Roster, Scraper, PlayerRanking, Validators, PointCalc, Utility
  build-depends:  async

executable head2head
  import: shared-libs
  hs-source-dirs: src, src/ADT, src/League
  main-is: Head2Head.hs
  other-modules:  Scraper, Input, Middle, Roster, Config, Points, OfficialRoster, Validators, PlayerRanking, PointCalc, Stats, Utility
  build-depends:  async

executable league
  import: shared-libs
  hs-source-dirs: src, src/ADT, src/League
  main-is: LeagueTEST.hs
  other-modules:  Validators, Config, Points, Input, Middle, OfficialRoster, Roster, PlayerRanking, PointCalc, Utility

executable official
  import: shared-libs
  hs-source-dirs: src, src/ADT, src/League
  main-is: OfficialTest.hs
  other-modules:  Roster, Config, Input, OfficialRoster, Points, Middle, PointCalc, PlayerRanking, Validators, Utility

executable generators
  import: shared-libs
  hs-source-dirs: src, src/ADT, src/League
  main-is: Generators.hs
  other-modules:  Config, OfficialRoster, Roster, PlayerRanking, Input, Middle, Points, Validators, Utility

executable autodraft
  import: shared-libs
  hs-source-dirs: src, src/ADT, src/League
  main-is: AutoDraft.hs
  other-modules:  Config, OfficialRoster, Roster, PlayerRanking, Input, Middle, Points, Validators, Utility, Draft

executable autodraftM
  import: shared-libs
  hs-source-dirs: src, src/ADT, src/League
  main-is: AutoDraftM.hs
  other-modules:  Config, OfficialRoster, Roster, PlayerRanking, Input, Middle, Points, Validators, Utility, DraftM
  build-depends:  mtl

executable test_adt
  import: shared-libs
  hs-source-dirs: src, src/ADT, src/League
  main-is: Test.hs
  other-modules:  Input_trace
  build-depends:  base >=4.11 && <4.18
                , debug-trace-var
                , bytestring
                , aeson
                , text
                , containers
                , async

executable graphviz
  import: shared-libs
  hs-source-dirs: src, src/ADT, src/League
  main-is: TypeGraph.hs
  other-modules:  Roster, Config, Input, OfficialRoster, Points, Middle, PointCalc, PlayerRanking, Validators, Utility
  build-depends:  base >=4.11 && <4.18
                , debug-trace-var
                , bytestring
                , aeson
                , text
                , containers
                , async
                , graphviz
                , process
