cabal-version: 3.6
-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: scraper
version: 0.0.3.0

executable scraper
  hs-source-dirs: src
  main-is: Main.hs
  ghc-options: -O2
  other-modules:  InputADT, Scraper, MiddleADT, ConfigADT
  build-depends:  base >=4.11 && <4.18
                , http-conduit 
                , time
                , bytestring
                , http-client-tls
                , http-client
                , zlib
                , process
                , aeson
                , aeson-schemas
                , lens
                , vector
                , unordered-containers
                , text
                , debug-trace-var
                , containers
                , cryptohash-sha256
                , scientific
                , directory
                , async


executable fetchStats
  hs-source-dirs: src
  main-is: Mutate.hs
  ghc-options: -O2
  other-modules:  InputADT, Scraper, MiddleADT
  build-depends:  base >=4.11 && <4.18
                , http-conduit 
                , time
                , bytestring
                , http-client-tls
                , http-client
                , zlib
                , process
                , aeson
                , aeson-schemas
                , lens
                , vector
                , unordered-containers
                , text
                , debug-trace-var
                , containers
                , cryptohash-sha256
                , scientific
                , directory
                , async


executable test_adt
  hs-source-dirs: src
  main-is: Test_ADT.hs
  ghc-options: -O2
  other-modules:  InputADT_trace
  build-depends:  base >=4.11 && <4.18
                , http-conduit 
                , time
                , bytestring
                , http-client-tls
                , http-client
                , zlib
                , process
                , aeson
                , aeson-schemas
                , lens
                , vector
                , unordered-containers
                , text
                , debug-trace-var
                , containers
                , cryptohash-sha256
                , scientific
                , directory
                , async
