cabal-version: 3.6
-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: scraperProto
version: 1.0.0.3

executable scraperProto
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:  Scraper
  build-depends:  base >=4.11 && <4.18
                , http-conduit 
                , time
                , bytestring
                , http-client-tls
                , http-client
                , zlib
                , process
                , aeson
                , lens
                , vector
                , unordered-containers
                , text
                , containers
